src/objects/Seat__c.object
<CustomObject>
    <fields>
        <fullName>Row__c</fullName>
        <label>Row</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seat_Number__c</fullName>
        <label>Seat Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <picklist>
            <picklistValues>
                <fullName>Orchestra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balcony</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Box Seat</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <label>Venue</label>
        <referenceTo>Venue__c</referenceTo>
        <relationshipLabel>Seats</relationshipLabel>
        <relationshipName>Seats</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Seat</label>
    <nameField>
        <label>Seat Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Seats</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>